add and update api-gateway auth-service